elements spacing corrected & html file cleaned up

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 * {
     margin: 0;
-    padding: 5;
+    padding: 0;
 
 }
 
@@ -13,10 +13,7 @@ body{
     line-height: normal;
     font-weight: 400;
     color: rgb(3, 3, 3);
-    max-height: 4rem;
-    overflow: visible;
-    
-    
+    margin-bottom: 100px;
   }
 
 .header{
@@ -60,7 +57,11 @@ justify-content: space-between;
     background-image: #E5E5E5;
     width: 100%;
     padding: 100px 0px;
-  
+    background-image: url(assets/Vector.png);
+    background-position: left; 
+    background-repeat: no-repeat;
+    background-size: 50vw;
+
 }
 
 .services__title h2{
@@ -71,15 +72,14 @@ justify-content: space-between;
 }
 
 .services__box{
-    display: grid;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 180px;
+    margin-right: 180px;
     grid-template-columns: 2fr 2fr 2fr;
     justify-content: center;
     align-items: center;
     min-height: 400px;
-    background-image: url(assets/Vector.png);
-    background-position: left; 
-    background-repeat: no-repeat;
-    background-size: contain;
 }
 
 .services__card{
@@ -91,19 +91,51 @@ justify-content: space-between;
     overflow: visible;
     border-radius: 20px;
     background: #FFFFFF;
-    box-shadow: 10px 10px 8px #888888;
+    box-shadow: 10px 40px 50px 0px #E5E9F666;    ;
+    margin-bottom: 0;
+    
 }
-.services__title p{
-    text-align: center;
+
+.services__card img{
+    width: 45px;
+    margin-bottom: 10px;
 }
+
+.services__p{
+ text-align: center;
+}
+
+.services__button{
+    border-radius: 8px;
+    font-size: large;
+    background-color: white;
+    color: black;
+    border: 2px solid #5A98F2;
+    margin: 100px;
+    margin-top: 30;
+   
+}
+
+.virtual__healtcare {
+    background-image: url(assets/element.svg);
+    background-position: top-left; 
+    background-repeat: no-repeat;
+    background-size: 60px;
+}
+
+.user__info{
+    display: flex;
+}
+
 .virtual__healtcare img{
      margin-left: 20px;
      margin-right: 20px;
-     height: 500px;
+     width: 600px;
 }
 
 .virtual__healtcare{
     margin-bottom: 40px;
+
 }
 
 .virtual__healtcare h2{
@@ -135,111 +167,46 @@ button:hover {
     margin-bottom: 30px;
 }
 
-.courses-container{
+.feedback__container{
     justify-content: center;
 }
 
-.course {
+.feedback__card {
     position: center;
-	background-color: #fff;
+	background-color: #5A98F2;
 	border-radius: 10px;
 	box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
 	display: flex;
 	max-width: 100%;
 	margin: 20px;
 	overflow: hidden;
-	width: 700px;
+	width: 900px;
+    height: 300px;
 }
 
-.course h6 {
-	opacity: 0.6;
-	margin: 0;
-	letter-spacing: 1px;
-	text-transform: uppercase;
+.virtual__healtcare{
+    margin-right: 20px;
 }
 
-.course h2 {
-	letter-spacing: 1px;
-	margin: 10px 0;
-}
-
-.course-preview {
-	background-color: #2A265F;
-	color: #fff;
-	padding: 30px;
-	max-width: 250px;
-}
-
-.course-preview img{
-    border-radius: 50%;
-}
-
-.course-preview a {
-	color: #fff;
-	display: inline-block;
-	font-size: 12px;
-	opacity: 0.6;
-	margin-top: 30px;
-	text-decoration: none;
-}
-
-.course-info {
+.feedback__info {
 	padding: 30px;
 	position: relative;
 	width: 100%;
+    display: flex;
 }
 
-.progress-container {
-	position: absolute;
-	top: 30px;
-	right: 30px;
-	text-align: right;
-	width: 150px;
+.feedback__info img{
+    border-radius: 50%;
 }
 
-.progress {
-	background-color: #ddd;
-	border-radius: 3px;
-	height: 5px;
-	width: 100%;
-}
-
-.progress::after {
-	border-radius: 3px;
-	background-color: #2A265F;
-	content: '';
-	position: absolute;
-	top: 0;
-	left: 0;
-	height: 5px;
-	width: 66%;
-}
-
-.progress-text {
-	font-size: 10px;
-	opacity: 0.6;
-	letter-spacing: 1px;
-}
-
-.btn {
-	background-color: #2A265F;
-	border: 0;
-	border-radius: 50px;
-	box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
-	color: #fff;
-	font-size: 16px;
-	padding: 12px 25px;
-	position: absolute;
-	bottom: 30px;
-	right: 30px;
-	letter-spacing: 1px;
-}
 .feedback{
+    justify-content: center;
     display: flex;
     width: 1040px;
     align-items: flex-end;
     flex-wrap: wrap;
-    padding-left: 350px;
+    margin: 100px;
+    margin-left: 250px;    
 }
 
 .articles{
@@ -248,10 +215,12 @@ button:hover {
     justify-content: space-evenly;
     flex-wrap: wrap;
     align-content: center;
-    position: absolute;
+   
     margin-left: 250px;
+    margin-bottom: 100px;
   }
-  .card {
+
+.card {
     margin: 10px;
     background-color: #fff;
     border-radius: 10px;
@@ -317,8 +286,8 @@ button:hover {
 
 .footer{
     background-color: #5A98F2;
-    padding: 70px 0;
-    margin-top: 30px;
+    max-height: 300px;
+    margin-top: auto;
 }
 
 .container{
@@ -337,4 +306,5 @@ button:hover {
 .footer__col{
     width: 25%;
     padding: 0 15px;
+    margin-top: 200px;
 }
